fix-styling: privacy-policy and imprint headline out of viewport

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,13 +33,17 @@ app-content {
 }
 
 app-privacy-policy {
-    min-height: calc(100vh - 110px - 291px);
     display: block;
+    min-height: calc(100vh - 110px - 291px);
+    max-width: 1440px;
+    margin: auto;
 }
 
 app-imprint {
-    min-height: calc(100vh - 110px - 291px);
     display: block;
+    min-height: calc(100vh - 110px - 291px);
+    max-width: 1440px;
+    margin: auto;
 }
 
 *,
